--- a/frontend/styles/blocks/_icon.scss
+++ b/frontend/styles/blocks/_icon.scss
@@ -23,19 +23,19 @@
 
   &--yellow-arrow {
     &::after {
-      background-image: url('../../icons/arrow-top-right_blue.svg');
+      background-image: url('../icons/arrow-top-right_blue.svg');
     }
   }
 
   &--yellow-eye {
     &::after {
-      background-image: url('../../icons/eye_blue.svg');
+      background-image: url('../icons/eye_blue.svg');
     }
   }
 
   &--gray-arrow-down {
     &::after {
-      background-image: url('../../icons/arrow-down_gray.svg');
+      background-image: url('../icons/arrow-down_gray.svg');
     }
   }
 }
