--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -520,13 +520,13 @@ button[aria-label]::before {
   }
 }
 .icon--yellow-arrow::after {
-  background-image: url("../../icons/arrow-top-right_blue.svg");
+  background-image: url("../icons/arrow-top-right_blue.svg");
 }
 .icon--yellow-eye::after {
-  background-image: url("../../icons/eye_blue.svg");
+  background-image: url("../icons/eye_blue.svg");
 }
 .icon--gray-arrow-down::after {
-  background-image: url("../../icons/arrow-down_gray.svg");
+  background-image: url("../icons/arrow-down_gray.svg");
 }
 
 .logo {
