--- a/frontend/styles/blocks/_field.scss
+++ b/frontend/styles/blocks/_field.scss
@@ -32,8 +32,8 @@
     width: 100%;
     height: rem(67);
     padding-inline: rem(20);
-    color: var(--color-dark);
-    background-color: var(--color-dark-10);
+    color: var(--color-light);
+    background-color: var(--color-dark);
     border: var(--border);
     border-radius: rem(8);
 
