--- a/frontend/styles/blocks/_hero.scss
+++ b/frontend/styles/blocks/_hero.scss
@@ -75,22 +75,22 @@
     padding-left: rem(80);
     padding-bottom: rem(80);
     background:
-      url('../../images/resources-preview/bg.png') 0 0/cover no-repeat;
+      url('../images/resources-preview/bg.png') 0 0/cover no-repeat;
 
     @include laptop {
       padding-left: rem(50);
       padding-bottom: rem(50);
     }
 
-    @include tablet-above {
+    /* @include tablet-above {
       border-left: var(--border);
-    }
+    } */
 
     @include tablet {
       width: var(--100vw);
       margin-left: calc(var(--container-padding-x) * -1);
       padding: rem(100) rem(40) rem(40);
-      background-image: url('../../images/resources-preview/bg_tablet.png');
+      background-image: url('../images/resources-preview/bg_tablet.png');
       background-size: contain;
     }
   }
