--- a/frontend/styles/blocks/_soc1als.scss
+++ b/frontend/styles/blocks/_soc1als.scss
@@ -21,7 +21,7 @@
 
         width: 100%;
         height: rem(60);
-        background-color: var(--color-dark-10);
+        background-color: var(--color-dark);
         border: var(--border);
         border-radius: rem(6);
 
