--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -229,7 +229,7 @@ svg * {
     var(--color-dark-15) 64%,
     var(--color-accent) 136%
   );
-  --border: 0.0625rem solid var(--color-dark-15);
+  --border: 0.0625rem solid var(--color-dark-20);
   --shadow: 0 0 0 0.1875rem #191919;
   --font-family-base: "Inter", sans-serif;
   --font-family-accent: "Inter", sans-serif;
@@ -325,7 +325,7 @@ svg * {
   translate: 0 -50%;
   content: "";
   right: 0;
-  background: url("../../icons/arrow-top-right_black.svg") center no-repeat var(--color-accent);
+  background: url("../icons/arrow-top-right_black.svg") center no-repeat var(--color-accent);
   border-radius: 50%;
 }
 
@@ -555,16 +555,16 @@ button[aria-label]::before {
 }
 @media (any-hover: hover) {
   .button:hover {
-    color: var(--color-accent);
+    color: var(--color-dark);
     background-color: var(--color-dark-10);
-    border-color: var(--color-accent);
+    border-color: var(--color-gray-60);
   }
 }
 @media (any-hover: none) {
   .button:active {
-    color: var(--color-accent);
+    color: var(--color-dark);
     background-color: var(--color-dark-10);
-    border-color: var(--color-accent);
+    border-color: var(--color-gray-60);
   }
 }
 .button--accent {
@@ -777,7 +777,7 @@ button[aria-label]::before {
   align-items: center;
   width: 100%;
   height: 3.75rem;
-  background-color: var(--color-dark-10);
+  background-color: var(--color-dark);
   border: var(--border);
   border-radius: 0.375rem;
 }
@@ -1116,7 +1116,10 @@ button[aria-label]::before {
   grid-area: resources-preview;
   padding-left: 5rem;
   padding-bottom: 5rem;
-  background: url("../../images/resources-preview/bg.png") 0 0/cover no-repeat;
+  background: url("../images/resources-preview/bg.png") 0 0/cover no-repeat;
+  /* @include tablet-above {
+    border-left: var(--border);
+  } */
 }
 @media (width <= 90.06125rem) {
   .hero__resources-preview {
@@ -1124,17 +1127,12 @@ button[aria-label]::before {
     padding-bottom: 3.125rem;
   }
 }
-@media (width > 63.99875rem) {
-  .hero__resources-preview {
-    border-left: var(--border);
-  }
-}
 @media (width <= 63.99875rem) {
   .hero__resources-preview {
     width: var(--100vw);
     margin-left: calc(var(--container-padding-x) * -1);
     padding: 6.25rem 2.5rem 2.5rem;
-    background-image: url("../../images/resources-preview/bg_tablet.png");
+    background-image: url("../images/resources-preview/bg_tablet.png");
     background-size: contain;
   }
 }
@@ -2421,8 +2419,8 @@ button[aria-label]::before {
   width: 100%;
   height: 4.1875rem;
   padding-inline: 1.25rem;
-  color: var(--color-dark);
-  background-color: var(--color-dark-10);
+  color: var(--color-light);
+  background-color: var(--color-dark);
   border: var(--border);
   border-radius: 0.5rem;
 }
@@ -2516,7 +2514,7 @@ button[aria-label]::before {
   width: var(--size);
   height: var(--size);
   content: "";
-  background: url("../../icons/arrow-down_white.svg") center/contain no-repeat;
+  background: url("../icons/arrow-down_white.svg") center/contain no-repeat;
   transition-duration: var(--transition-duration);
 }
 @media (width <= 90.06125rem) {
@@ -2534,7 +2532,7 @@ button[aria-label]::before {
   max-height: 15.625rem;
   overflow-y: auto;
   padding: 0.25rem;
-  background-color: var(--color-dark-10);
+  background-color: var(--color-dark);
   border: var(--border);
   border-radius: 0.375rem;
   transition-duration: var(--transition-duration);
@@ -2619,7 +2617,7 @@ button[aria-label]::before {
   align-items: center;
   appearance: none;
   margin: 0;
-  background-color: var(--color-dark-10);
+  background-color: var(--color-dark);
   border: var(--border);
   border-radius: 0.25rem;
 }
@@ -2637,7 +2635,7 @@ button[aria-label]::before {
 }
 .checkbox__input::after {
   content: "✔";
-  color: var(--color-dark);
+  color: var(--color-dark-10);
   transition-duration: var(--transition-duration);
 }
 
@@ -2739,6 +2737,15 @@ button[aria-label]::before {
 
 .contacts__header {
   border-bottom: var(--border);
+}
+
+.feedback-form__success-message {
+  background-color: #28a745;
+  color: white;
+  padding: 15px;
+  border-radius: 5px;
+  margin-top: 20px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
